--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "server.js",
   "scripts": {
-    "start": "json-server --watch db.json --port=3001"
+    "start": "node server.js"
   },
   "dependencies": {
     "json-server": "^0.17.0"
